Updates for readability

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,4 @@ export(detach_all_objects)
 export(is_package_loaded)
 export(load_packages)
 export(poe_test)
-export(summary_poe_test)
+export(print_poe_test)
