--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,6 +10,8 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 Imports: 
-    stringr
+  stringr
 Suggests: 
-    testthat
+  testthat,
+  tibble,
+  ggplot2
