--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,11 +11,13 @@ LazyData: true
 RoxygenNote: 6.1.1
 Depends: R (>= 3.1.0)
 Imports: 
-  stringr
+  stringr,
+  ggplot2,
+  grid,
+  gridExtra
 Suggests: 
     testthat,
     tibble,
-    ggplot2,
     knitr,
     rmarkdown
 VignetteBuilder: knitr
