--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(is_package_loaded)
 export(last)
 export(load_packages)
 export(plot_multiple)
-export(rename_folder)
+export(rename_dir)
 export(rep_cols)
 export(rep_rows)
 export(setup_beamer)
