Download beamer now uses github_download_files. Other minor improvements.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(create_dir)
 export(detach_all)
 export(github_api_info)
 export(github_default_branch)
+export(github_download_files)
 export(github_repo_file_list)
 export(initialize_new_project)
 export(is_package_loaded)
