--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,9 @@
 
 export(create_dir)
 export(detach_all)
+export(download_from_github)
 export(github_api_info)
 export(github_default_branch)
-export(github_download_files)
 export(github_repo_file_list)
 export(initialize_new_project)
 export(is_package_loaded)
@@ -15,7 +15,10 @@ export(rename_dir)
 export(rep_cols)
 export(rep_rows)
 export(setup_beamer)
+export(setup_models)
 export(update_beamer)
+export(update_from_github)
+export(update_models)
 importFrom(stats,runif)
 importFrom(utils,browseURL)
 importFrom(utils,savehistory)
